# CarrotRFIDTester

./: .agentignore  .gitignore  README.md  main.py  pyproject.toml  run_bump.bat  run_sync.bat  run_test.bat
.agent/: README_FOR_AI.md
.github/workflows/: publish-pypi.yml
cards/: mifare_classic.py
drivers/: base.py  card_reader.py  pn532.py  pn532_hsu.py
hardware/: base.py  serial_transport.py  transport.py
ref/crypto1/: build_clang.bat  build_msvc.bat  main.c  setup_msvc.bat
src/crft/: __init__.py  main.py  pn532_test.py
src/crft/cards/: __init__.py  base_card.py  base_tag.py  mifare_classic.py  ntag21x.py  ntag22x.py  type2tag.py
src/crft/crypto/: __init__.py  aes128.py  base_crypto.py  crypto1.py
src/crft/drivers/: __init__.py  card_reader.py  pn532_hsu.py
src/crft/hardware/: __init__.py  base.py  serial_transport.py
src/crft/parsers/: __init__.py  base_parser.py  mifare_classic_parser.py  pn532_hsu_parser.py  t2t_parser.py
src/crft/tools/: aes128_cli.py  pn532_scanner.py
src/crft/trace/: __init__.py  decoder.py  formatter.py  handler.py  manager.py
src/crft/utils/: __init__.py  bitops.py  crc.py
tests/: conftest.py  test_authentication.py  test_connection.py  test_polling.py
tests/cards/: test_mifare.py  test_ntag21x.py  test_ntag22x.py  test_type2tag.py
tests/crypto/: test_aes128.py  test_crypto1.py
tests/drivers/: test_polling.py
tests/utils/: test_crc.py
