[project]
name = "CarrotRFIDTester"
version = "0.0.13"
description = "A RFID/NFC autpmation testing framework for cards and readers."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bump-my-version>=1.3.0",
    "loguru>=0.7.3",
    "pyserial>=3.5",
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
crft = "crft.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = true

[tool.bumpversion]
current_version = "0.0.13"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"

# 驱动文件版本号
# [[tool.bumpversion.files]]
# filename = "src/driver.py"